cmake_minimum_required(VERSION 3.13)
project (Test)
set (Test_VERSION_MAJOR 1)
set (Test_VERSION_MINOR 0)
set (CMAKE_CXX_STANDARD 14)
include_directories("/usr/include/mysql++/")
include_directories("/usr/include/mysql/")
find_library(mysql++ REQUIRED)

add_executable(Test main.cpp)
target_link_libraries(Test mysqlpp)
